--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "health_dashboard_2",
+  "name": "health_dashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bluebird": "^3.5.0",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "react": "^15.5.4",
-    "react-addons-create-fragment": "^15.5.3",
     "react-dom": "^15.5.4",
-    "superagent": "^3.5.2"
+    "superagent": "^3.5.2",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^2.4.5"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
@@ -15,7 +18,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
 }
